--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ textarea {
 body {
     background-color: lightgreen;
     text-align: center;
+    font-size: x-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 button {
